Code Cleanup, 0 Warnings!